--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -14,9 +13,9 @@ body {
 main {
     padding: 100px;
 
- }
+}
 
- li {
+li {
     display: inline;
     padding: 0px 20px;
     text-decoration: none;
@@ -33,12 +32,12 @@ header {
     width: 98%;
     line-height: 60px;
     background-color: wheat;
-    
-  }
-  
-  header {
+
+}
+
+header {
     border-bottom: 10px solid;
-  }
+}
 
 .content {
     width: 75%;
@@ -48,22 +47,24 @@ header {
 #left-section {
     display: inline-block;
     margin-left: 20px;
-    background: wheat;
-    }
-        
+    background: rgb(94, 202, 206);
+}
+
 #right-section {
     margin-left: 20px;
     background: rgb(38, 177, 187);
-    border: 10px solid  black
-    
-    }
+    border: 10px solid black
+}
 
 .float-left {
-        float: left;
-        margin-right: 25px;
-    }
+    float: left;
+    margin-right: 25px;
+}
 
-.Career, .Family, .Hobbies, .Future {
+.Career,
+.Family,
+.Hobbies,
+.Future {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -72,56 +73,65 @@ header {
     color: #ffffff;
     border: 10px solid black
 }
-.Career img, .Family img, .Hobbies img, .Future img{
+
+.Career img,
+.Family img,
+.Hobbies img,
+.Future img {
     width: 275px;
     height: 250px;
 }
 
-.Career h2, .Family h2, .Hobbies h2, .Future h2{
-margin-bottom: 20px;
-font-size: 25px;
+.Career h2,
+.Family h2,
+.Hobbies h2,
+.Future h2 {
+    margin-bottom: 20px;
+    font-size: 25px;
 }
 
 footer {
-height: 60px;
-width: 100%;
-line-height: 60px;
- background-color: wheat;
-  margin-top: 0;
-  bottom: 0;
-  border-top: 10px solid;  
+    height: 60px;
+    width: 100%;
+    line-height: 60px;
+    background-color: rgb(94, 202, 206);
+    margin-top: 0;
+    bottom: 0;
+    border-top: 10px solid;
 }
 
 header.text-right {
-    display:flex;
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: wheat;
+    background-color: rgb(94, 202, 206);
     color: blue;
-    font-size: 15px; 
-    padding-left: 2%;  
+    font-size: 15px;
+    padding-left: 2%;
     border-bottom: 10px solid black;
 }
+
 /* .text-right{
     text-align: right;
     font-size: large;
 } */
 
 
-.text-center{
+.text-center {
     display: flex;
     justify-content: center;
 }
 
 img {
-display:flex;
-justify-content: center;
-width: 275px;
-height: 250px;
-border: 10px solid black;
+    display: flex;
+    justify-content: center;
+    width: 275px;
+    height: 250px;
+    border: 10px solid black;
 }
 
-section h1, section h3 {
+section h1,
+section h3 {
     display: flex;
     justify-content: center;
     font-size: 50px;
@@ -134,20 +144,20 @@ h4 {
 }
 
 
-.first-portfolio{
-   justify-content: center;
-   margin-left: 50%;
-   margin-right: 50%;
-   padding: 10px;
+.first-portfolio {
+    justify-content: center;
+    margin-left: 50%;
+    margin-right: 50%;
+    padding: 10px;
     margin: 50px;
     padding-right: 35%;
-   padding-left: 35%;
+    padding-left: 35%;
 }
 
 .first-portfolio img {
     width: 400px;
     height: 400px;
-    
+
 }
 
 figure {
@@ -158,7 +168,7 @@ figcaption {
     caption-side: bottom;
 }
 
- /* #Image-1{
+/* #Image-1{
     justify-content: center;
         padding: 10px;
         margin: 50px;
@@ -178,20 +188,20 @@ figcaption {
 } */
 
 
-    .portfolio {
-        display: flex;
-      }
+.portfolio {
+    display: flex;
+}
 
-      .column {
-        flex: 33.33%;
-        padding: 10px;
-        margin: 50px;
-        padding-left: 60px;
-        /* padding-right: 60px; */
-        /* border: 10px solid black; */
-      }
+.column {
+    flex: 33.33%;
+    padding: 10px;
+    margin: 50px;
+    padding-left: 60px;
+    /* padding-right: 60px; */
+    /* border: 10px solid black; */
+}
 
-      /* .portfolio {
+/* .portfolio {
         display: inline;
         margin-left: 225px;
         padding-left: 35px;
@@ -201,60 +211,62 @@ figcaption {
         border: 15px solid black;
       } */
 
-      @media (max-width: 800px) {
-       
-        h4 {
-            font-size: 10px;
-            color: rgb(3, 3, 3);
-        }
+@media (max-width: 800px) {
 
-        header.text-right {
-            display:flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: wheat;
-            color: blue;
-            font-size: 10px;   
-            padding: 10px;
-            border-bottom: 10px solid black;
-        }
+    h4 {
+        font-size: 10px;
+        color: rgb(3, 3, 3);
+    }
 
-        .text-center ul li a{
-            font-size: 10px;
-            
-        }
-        
-        img {
-        display:flex;
+    header.text-right {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: rgb(94, 202, 206);
+        color: blue;
+        font-size: 10px;
+        padding: 10px;
+        border-bottom: 10px solid black;
+    }
+
+    .text-center ul li a {
+        font-size: 10px;
+
+    }
+
+    img {
+        display: flex;
         justify-content: center;
         width: 275px;
         height: 250px;
         border: 10px solid black;
-        }
-        #left-section {
-            display: inline-block;
-            margin-left: 20px;
-            font-size: 10px;
-            background: wheat;
-            }
+    }
+
+    #left-section {
+        display: inline-block;
+        margin-left: 20px;
+        font-size: 10px;
+        background: rgb(94, 202, 206)
+    }
 
     #right-section {
         margin-left: 20px;
-         background: rgb(38, 177, 187);
-        border: 10px solid  black;
+        background: rgb(38, 177, 187);
+        border: 10px solid black;
         font-size: 10px;
-     }    
+    }
 
-     footer {
+    footer {
         margin-top: 0;
         bottom: 0;
-        border-top: 10px solid; 
-        font-size: 10px; 
-      }
-.text-right ul li a{
-    font-size: 10px;
+        border-top: 10px solid;
+        font-size: 10px;
+    }
+
+    .text-right ul li a {
+        font-size: 10px;
+    }
+
+
+
 }
-
-
-
-      }
