--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 body {
